(1) retooled relative path from file